--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Lucrezia Ferme</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://twitter.com/Lucrezia_CF" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -66,11 +65,11 @@
           </li>
 
           <li>
-            <a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a>
+            <a href="#portfolio"><i class="bx bx-book-content"></i> Projects</a>
           </li>
 
           <li class="nav-item ">
-            <a class="nav-link" href="/publications/"><i class="bx bx-library"></i>publications</a>
+            <a class="nav-link" href="/publications/"><i class="bx bx-library"></i>Publications</a>
           </li>
 
           <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
@@ -92,6 +91,17 @@
   </section><!-- End Hero -->
 
   <main id="main">
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -140,6 +150,14 @@
       </div>
     </section><!-- End About Section -->
 
+
+
+
+
+
+
+
+
     <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
       <div class="container">
@@ -155,7 +173,7 @@
             <div class="count-box">
               <i class="icofont-beaker"></i>
               <span data-toggle="counter-up">4</span>
-              <p><strong>Labs </strong> I have worked with:
+              <p><strong>Labs </strong>
                 Milan - Vienna - Lisbon</p>
             </div>
           </div>
@@ -171,8 +189,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="icofont-audio"></i>
-              <span data-toggle="counter-up">4/5</span>
-              <p><strong>Languages </strong> Italian, English, French, Portuguese, soon German... </p>
+              <span data-toggle="counter-up">5</span>
+              <p><strong>Languages </strong> Italian, English, French, Portuguese, basic German... </p>
             </div>
           </div>
 
@@ -180,7 +198,7 @@
             <div class="count-box">
               <i class="icofont-money"></i>
               <span data-toggle="counter-up">2</span>
-              <p><strong>Fellowships</strong> VBC Summer School - FCT PhD fellowship</p>
+              <p><strong>Fellowships</strong> Vienna BioCenter Summer School fellowship 2017- FCT PhD fellowship 2019</p>
             </div>
           </div>
 
@@ -189,13 +207,21 @@
       </div>
     </section><!-- End Facts Section -->
 
+
+
+
+
+
+
+
+
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Omnia vincit amor</p>
         </div>
 
         <div class="row skills-content">
@@ -255,6 +281,14 @@
       </div>
     </section><!-- End Skills Section -->
 
+
+
+
+
+
+
+
+
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
@@ -265,6 +299,7 @@
         </div>
 
         <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Integrative Biology &amp; Biomedicine PhD programme </h4>
@@ -297,39 +332,60 @@
               <h5>2019 - Present</h5>
               <p><em>Norden Lab </em></p>
               <ul>
-                <li>Bla </li>
-                <li>Bla. </li>
+                <li>Focus on advanced 3D image analysis using deep learning tools, such as StarDist, and GPU accelerated computing</li>
+                <li>Strong expertise of the lab in the use of light sheet fluorescence microscopy, which is a powerful technology that enables imaging of large biological systems with minimal photo-damage </li>
+                <li>Possibility to study cell and tissue biology of retinal neuroepithelia both in vivo and in vitro</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Scientific Intern</h4>
-              <h5>2019 - 7 months</h5>
-              <p><em>Kicheva Lab</em></p>
+              <h5>2019 </h5>
+              <p><em> <a href="https://ist.ac.at/en/research/kicheva-group/">KichevaLab</a></em></p>
               <ul>
-                <li>Work on new project about BMP signalling in the vertebrate neural tube</li>
+                <li>Investigation of BMP and its antagonists in patterning the vertebrate neural tube</li>
+                <li>Trained in working with mice and chick embryos</li>
+                <li>Techniques:immunofluorescence, cryo-sectioning, electroporation, cloning, RNA-FISH, Laser Scanning Confocal Microscopy.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Master student</h4>
-              <h5>2018 - 11 months</h5>
-              <p><em>Buecker Lab </em></p>
+              <h4>Master student </h4>
+              <h5>2018 </h5>
+              <p><em> <a href="https://www.maxperutzlabs.ac.at/research/research-groups/buecker">BueckerLab</a> </em></p>
               <ul>
-                <li>Bla </li>
-                <li>Bla. </li>
+                <li>Established live imaging strategies to study the sources of transcriptional heterogeneity in differentiation of mouse Embryonic Stem cells.</li>
+                <li>Developed a basic skill set for image analysis using ImageJ and Cell Profiler, to then code results in Python. </li>
+                <li>Extensively learned to perform tissue culture of ESCs and cloning. </li>
+                <li>Techniques: PCR, qPCR, western blots, immunofluorescence, DNA-FISH, RNA-FISH, Laser Scanning Confocal Microscopy, live imaging, FACS. </li>
               </ul>
             </div>
+            <div class="resume-item">
+              <h4>Bachelor student</h4>
+              <h5>2013 </h5>
+              <p><em> <a href="https://www.ifom.eu/en/cancer-research/research-labs/research-lab-pagani.php">PaganiLab</a> </em></p>
+              <ul>
+                <li>Undergrad rotation as first experience in a laboratory</li>
+                <li>Techniques: DNA-FISH, immunofluorescence, Laser Scanning Confocal Microscopy, primary cell culture </li>
+              </ul>
           </div>
         </div>
 
       </div>
     </section><!-- End Resume Section -->
 
+
+
+
+
+
+
+
+
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
+          <h2>Projects</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -337,16 +393,16 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-pub">Publication</li>
+              <li data-filter=".filter-code">Code</li>
+              <li data-filter=".filter-blog">Blog</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-blog">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -356,27 +412,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-code">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -386,60 +422,20 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
         </div>
 
       </div>
     </section><!-- End Portfolio Section -->
+
+
+
+
+
+
+
+
+
+
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -486,6 +482,15 @@
       </div>
     </section><!-- End Services Section -->
 
+
+
+
+
+
+
+
+
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -497,7 +502,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="col-lg-5 d-flex p-2">
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
@@ -514,9 +519,7 @@
 
 
           </div>
-
         </div>
-
       </div>
     </section><!-- End Contact Section -->
 
