Get rid of Services

--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Some numbers...</p>
+          <p>Some numbers... In particular, the last number refers to the fact that in 2017 I was one of 20 undergraduate students who were selected out of over 2000 applicants to join the Vienna BioCenter Summer School.
+            It was an incredibly transformative experience for me and it basically shaped the researcher I am now. The other fellowship has been awarded to my by the national funding agency of Portugal, the FCT, for my PhD project in the Norden Lab.
+            Stay tuned and you might find some interesting news about my work!</p>
         </div>
 
         <div class="row no-gutters">
@@ -330,7 +332,7 @@
             <div class="resume-item">
               <h4>PhD candidate</h4>
               <h5>2019 - Present</h5>
-              <p><em>Norden Lab </em></p>
+              <p><em><a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">Norden Lab</a> </em></p>
               <ul>
                 <li>Focus on advanced 3D image analysis using deep learning tools, such as StarDist, and GPU accelerated computing</li>
                 <li>Strong expertise of the lab in the use of light sheet fluorescence microscopy, which is a powerful technology that enables imaging of large biological systems with minimal photo-damage </li>
@@ -340,7 +342,7 @@
             <div class="resume-item">
               <h4>Scientific Intern</h4>
               <h5>2019 </h5>
-              <p><em> <a href="https://ist.ac.at/en/research/kicheva-group/">KichevaLab</a></em></p>
+              <p><em> <a href="https://ist.ac.at/en/research/kicheva-group/">Kicheva Lab</a></em></p>
               <ul>
                 <li>Investigation of BMP and its antagonists in patterning the vertebrate neural tube</li>
                 <li>Trained in working with mice and chick embryos</li>
@@ -350,7 +352,7 @@
             <div class="resume-item">
               <h4>Master student </h4>
               <h5>2018 </h5>
-              <p><em> <a href="https://www.maxperutzlabs.ac.at/research/research-groups/buecker">BueckerLab</a> </em></p>
+              <p><em> <a href="https://www.maxperutzlabs.ac.at/research/research-groups/buecker">Buecker Lab</a> </em></p>
               <ul>
                 <li>Established live imaging strategies to study the sources of transcriptional heterogeneity in differentiation of mouse Embryonic Stem cells.</li>
                 <li>Developed a basic skill set for image analysis using ImageJ and Cell Profiler, to then code results in Python. </li>
@@ -361,7 +363,7 @@
             <div class="resume-item">
               <h4>Bachelor student</h4>
               <h5>2013 </h5>
-              <p><em> <a href="https://www.ifom.eu/en/cancer-research/research-labs/research-lab-pagani.php">PaganiLab</a> </em></p>
+              <p><em> <a href="https://www.ifom.eu/en/cancer-research/research-labs/research-lab-pagani.php">Pagani Lab</a> </em></p>
               <ul>
                 <li>Undergrad rotation as first experience in a laboratory</li>
                 <li>Techniques: DNA-FISH, immunofluorescence, Laser Scanning Confocal Microscopy, primary cell culture </li>
@@ -437,60 +439,6 @@
 
 
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="icofont-computer"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="icofont-earth"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="icofont-image"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="icofont-settings"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="icofont-tasks-alt"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
-
-
-
-
-
-
-
-
-
-
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -502,7 +450,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex p-2">
+          <div class="col-lg-8 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
