--- a/index.html
+++ b/index.html
@@ -163,9 +163,10 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Some numbers... In particular, the last number refers to the fact that in 2017 I was one of 20 undergraduate students who were selected out of over 2000 applicants to join the Vienna BioCenter Summer School.
-            It was an incredibly transformative experience for me and it basically shaped the researcher I am now. The other fellowship has been awarded to my by the national funding agency of Portugal, the FCT, for my PhD project in the Norden Lab.
-            Stay tuned and you might find some interesting news about my work!</p>
+          <p>Some numbers... </p>
+          <p>In particular, the last number refers to the fact that in 2017 I was one of 20 undergraduate students who were selected out of over 2000 applicants to join the Vienna BioCenter Summer School.
+            It was an incredibly transformative experience for me and it basically shaped the researcher I am now. The other fellowship has been awarded to me by the national funding agency of Portugal, the FCT, for my PhD project in the Norden Lab.</p>
+          <p>Stay tuned and you might find some interesting news about my work!</p>
         </div>
 
         <div class="row no-gutters">
@@ -174,8 +175,8 @@
             <div class="count-box">
               <i class="icofont-beaker"></i>
               <span data-toggle="counter-up">4</span>
-              <p><strong>Labs </strong>
-                Milan - Vienna - Lisbon</p>
+              <p><strong>Labs </strong></p>
+              <p>Milan - Vienna - Lisbon</p>
             </div>
           </div>
 
@@ -183,7 +184,8 @@
             <div class="count-box">
               <i class="icofont-airplane-alt"></i>
               <span data-toggle="counter-up">4</span>
-              <p><strong>Countries </strong> I have lived in</p>
+              <p><strong>Countries </strong> </p>
+              <p>I have lived in</p>
             </div>
           </div>
 
@@ -191,7 +193,8 @@
             <div class="count-box">
               <i class="icofont-audio"></i>
               <span data-toggle="counter-up">5</span>
-              <p><strong>Languages </strong> Italian, English, French, Portuguese, basic German... </p>
+              <p><strong>Languages </strong> </p>
+              <p>Italian, English, French, Portuguese, basic German... </p>
             </div>
           </div>
 
@@ -199,7 +202,9 @@
             <div class="count-box">
               <i class="icofont-money"></i>
               <span data-toggle="counter-up">2</span>
-              <p><strong>Fellowships</strong> Vienna BioCenter Summer School fellowship 2017- FCT PhD fellowship 2019</p>
+              <p><strong>Fellowships</strong> </p>
+              <p>VBC Summer School 2017</p>
+              <p>FCT Individual PhD scholarship 2019</p>
             </div>
           </div>
 
@@ -306,23 +311,23 @@
               <h4>Integrative Biology &amp; Biomedicine PhD programme </h4>
               <h5>2019 - present</h5>
               <p><em>Instituto Gulbenkian de Ciencia, Oeiras - Lisbon, PT</em></p>
-              <p>"Investigating the influence of pseudostratification for neuroepithelial development"
-                PhD project under the supervision of Dr Caren NordenLab
-                Selected through the International Max Planck Research School for Cell, Development and System Biology (call 2019) </p>
+              <p>"Investigating the influence of pseudostratification for neuroepithelial development"</p>
+              <p>PhD project under the supervision of Dr Caren NordenLab</p>
+              <p>Selected through the International Max Planck Research School for Cell, Development and System Biology (call 2019) </p>
             </div>
             <div class="resume-item">
               <h4>MSc in Cellular &amp; Molecular Biotechnology </h4>
               <h5>2016 - 2018</h5>
               <p><em>University of Trento, Trento, IT</em></p>
-              <p>"Establishment of a live imaging strategy to study ERK activity in the exit from naive pluripotency"
-                Master Thesis at the Max Perutz Laboratories, Vienna, Austria, under supervision of Dr Christa Buecker</p>
+              <p>"Establishment of a live imaging strategy to study ERK activity in the exit from naive pluripotency"</p>
+              <p>Master Thesis at the Max Perutz Laboratories, Vienna, Austria, under supervision of Dr Christa Buecker</p>
             </div>
             <div class="resume-item">
               <h4>BSc in Medical Biotechnology </h4>
               <h5>2013 - 2016</h5>
               <p><em>University of Milan, Milan, IT</em></p>
-              <p> "Characterization of the role of long non-coding RNAs during the differentiation of human CD4 T lymphocytes"
-                BSc Thesis at the INGM, Milan, Italy, under the supervision of Prof. Massimiliano Pagani. </p>
+              <p> "Characterization of the role of long non-coding RNAs during the differentiation of human CD4 T lymphocytes"</p>
+              <p>BSc Thesis at the INGM, Milan, Italy, under the supervision of Prof. Massimiliano Pagani. </p>
             </div>
           </div>
 
@@ -449,7 +454,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-8 d-flex align-items-stretch">
+          <div class="col-lg-12 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
