--- a/index.html
+++ b/index.html
@@ -163,10 +163,6 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Some numbers... </p>
-          <p>In particular, the last number refers to the fact that in 2017 I was one of 20 undergraduate students who were selected out of over 2000 applicants to join the Vienna BioCenter Summer School.
-            It was an incredibly transformative experience for me and it basically shaped the researcher I am now. The other fellowship has been awarded to me by the national funding agency of Portugal, the FCT, for my PhD project in the Norden Lab.</p>
-          <p>Stay tuned and you might find some interesting news about my work!</p>
         </div>
 
         <div class="row no-gutters">
@@ -249,6 +245,27 @@
             </div>
 
             <div class="progress">
+              <span class="skill">FACS <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">FISH and immunostainings <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Molecular Biology techniques <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
               <span class="skill">Tissue Culture <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
@@ -268,6 +285,13 @@
 
             <div class="progress">
               <span class="skill">ImageJ Macro <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">R <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -312,7 +336,7 @@
               <h5>2019 - present</h5>
               <p><em>Instituto Gulbenkian de Ciencia, Oeiras - Lisbon, PT</em></p>
               <p>"Investigating the influence of pseudostratification for neuroepithelial development"</p>
-              <p>PhD project under the supervision of Dr Caren NordenLab</p>
+              <p>PhD project under the supervision of Dr. Caren Norden</p>
               <p>Selected through the International Max Planck Research School for Cell, Development and System Biology (call 2019) </p>
             </div>
             <div class="resume-item">
@@ -320,7 +344,7 @@
               <h5>2016 - 2018</h5>
               <p><em>University of Trento, Trento, IT</em></p>
               <p>"Establishment of a live imaging strategy to study ERK activity in the exit from naive pluripotency"</p>
-              <p>Master Thesis at the Max Perutz Laboratories, Vienna, Austria, under supervision of Dr Christa Buecker</p>
+              <p>Master Thesis at the Max Perutz Laboratories, Vienna, Austria, under supervision of Dr. Christa Buecker</p>
             </div>
             <div class="resume-item">
               <h4>BSc in Medical Biotechnology </h4>
@@ -336,7 +360,7 @@
             <div class="resume-item">
               <h4>PhD candidate</h4>
               <h5>2019 - Present</h5>
-              <p><em><a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">Norden Lab</a> </em></p>
+              <p><em><a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">Norden Lab</a> - IGC, Oeiras, Portugal</em></p>
               <ul>
                 <li>Focus on advanced 3D image analysis using deep learning tools, such as StarDist, and GPU accelerated computing</li>
                 <li>Strong expertise of the lab in the use of light sheet fluorescence microscopy, which is a powerful technology that enables imaging of large biological systems with minimal photo-damage </li>
@@ -346,31 +370,29 @@
             <div class="resume-item">
               <h4>Scientific Intern</h4>
               <h5>2019 </h5>
-              <p><em> <a href="https://ist.ac.at/en/research/kicheva-group/">Kicheva Lab</a></em></p>
+              <p><em> <a href="https://ist.ac.at/en/research/kicheva-group/">Kicheva Lab</a> - IST Austria, Klosterneuberg, Austria</em></p>
               <ul>
                 <li>Investigation of BMP and its antagonists in patterning the vertebrate neural tube</li>
                 <li>Trained in working with mice and chick embryos</li>
-                <li>Techniques:immunofluorescence, cryo-sectioning, electroporation, cloning, RNA-FISH, Laser Scanning Confocal Microscopy.</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Master student </h4>
               <h5>2018 </h5>
-              <p><em> <a href="https://www.maxperutzlabs.ac.at/research/research-groups/buecker">Buecker Lab</a> </em></p>
+              <p><em> <a href="https://www.maxperutzlabs.ac.at/research/research-groups/buecker">Buecker Lab</a> - Max Perutz Laboratories, Vienna, Austria </em></p>
               <ul>
                 <li>Established live imaging strategies to study the sources of transcriptional heterogeneity in differentiation of mouse Embryonic Stem cells.</li>
                 <li>Developed a basic skill set for image analysis using ImageJ and Cell Profiler, to then code results in Python. </li>
                 <li>Extensively learned to perform tissue culture of ESCs and cloning. </li>
-                <li>Techniques: PCR, qPCR, western blots, immunofluorescence, DNA-FISH, RNA-FISH, Laser Scanning Confocal Microscopy, live imaging, FACS. </li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Bachelor student</h4>
               <h5>2013 </h5>
-              <p><em> <a href="https://www.ifom.eu/en/cancer-research/research-labs/research-lab-pagani.php">Pagani Lab</a> </em></p>
+              <p><em> <a href="https://www.ifom.eu/en/cancer-research/research-labs/research-lab-pagani.php">Pagani Lab</a> - INGM, Milano, Italia</em></p>
               <ul>
                 <li>Undergrad rotation as first experience in a laboratory</li>
-                <li>Techniques: DNA-FISH, immunofluorescence, Laser Scanning Confocal Microscopy, primary cell culture </li>
+                <li>Project focusing on the role of long non-coding RNAs in differentiation of T naive lymphocytes </li>
               </ul>
           </div>
         </div>
@@ -454,7 +476,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-12 d-flex align-items-stretch">
+          <div class="col-lg-10 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
