--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Lucrezia Ferme</h1>
-      <p>I'm <span class="typed" data-typed-items="a Molecular Biologist, a BioImage Analyst, a DevBio enthisiast, a Spaghetti lover "></span></p>
+      <p> <span class="typed" data-typed-items="Molecular Biologist, Microscopy lover, BioImage Analysis enthusiast, Spaghetti eater "></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -108,9 +108,6 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>
-          Hello world!
-          </p>
         </div>
 
         <div class="row">
@@ -118,18 +115,28 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Stem Cell &amp; Developmental Biologist</h3>
+            <h3>Hello world, I'm Lucrezia!</h3>
             <p class="font-italic">
-              My name is Lucrezia and I am a PhD candidate in the Norden Lab at the Instituto Gulbenkian de Ciencia. My main research interest is morphogenesis, meaning the discipline that studies how tissues and organs form during development.
-              I am fascinated by the capacity of individual stem cells to decode environmental stimuli coming from neighbouring cells and tissues in order to integrate them with their own genetic program and define their next "differentiation step".
-              My current project focuses on the physical properties of pseudostratified epithelia, having as a model system the development of the retinal neuroepithelium. Over the years, I had the chance to work on many other exciting projects related to cell fate decision and tissue patterning.
+              </p>
+
+            <p>  I am your expert when it comes to Stem Cell &amp; Developmental Biology. Over the course of the past 4 years I have been working in
+              several renowned intitutes around Europe, where I had the chance to dive deeper into the fascinating world of cell fate determination and morphogenesis.
+              I was involved in the setting up of several projects and trained to work with multiple cell types and model organisms. During this time,
+              I started my journey into programming and image analysis, which are now one of my main passions.
+              </p>
+
+            <p>  At the moment, I am based in Lisbon, where I am working as a PhD candidate in the laboratory of Dr. Caren Norden.
+            My current project focuses on the mechanisms that coordinate proliferation and differentiation in the retinal neuroepithelium
+            and involves the use of cutting-edge microscopy techniques such as AiryScan microscopy, Lightsheet Fluorescence Microscopy and
+            deep learning tools for image processing.
             </p>
+
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Current Lab:</strong> <a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">NordenLab</a> </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Current Model Organisms:</strong> Zebrafish &amp; Human Organoids </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Currently I am:</strong> IBB PhD candidate</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Playground:</strong> Zebrafish &amp; Human Organoids </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Currently I am:</strong> Lost - Frank Ocean </li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -148,6 +155,26 @@
 
       </div>
     </section><!-- End About Section -->
+
+
+<!-- ======= News Section ======= -->
+
+    <section id="news" class="news">
+      <div class="section-title">
+      <h2>News</h2>
+
+    <div class="table-responsive">
+      <table class="table table-sm table-borderless">
+
+        <tr>
+          <th scope="row">Jan 20, 2020</th>
+          <td>
+              Website is online (!) and still in the making <img class="emoji" title=":sparkles:" alt=":sparkles:" src="https://github.githubassets.com/images/icons/emoji/unicode/2728.png" height="20" width="20"> <img class="emoji" title=":smile:" alt=":smile:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" height="20" width="20">
+          </td>
+        </tr>
+      </table>
+    </div>
+  </section><!-- End About Section -->
 
 
 
@@ -188,9 +215,9 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="icofont-audio"></i>
-              <span data-toggle="counter-up">5</span>
+              <span data-toggle="counter-up">4</span>
               <p><strong>Languages </strong> </p>
-              <p>Italian, English, French, Portuguese, basic German... </p>
+              <p>Italian, English, French, Portuguese</p>
             </div>
           </div>
 
@@ -414,7 +441,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p> </p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -510,7 +537,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designeds by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
