change About me

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Hello world, I'm Lucrezia!</h3>
+            <h3>Hello, world: I'm Lucrezia!</h3>
             <p class="font-italic">
               </p>
 
-            <p>  I am your expert when it comes to Stem Cell &amp; Developmental Biology. Over the course of the past 4 years I have been working in
+            <p>  I am a molecular biologist interested in Stem Cell &amp; Developmental Biology. Over the course of the past 4 years I have been working in
               several renowned intitutes around Europe, where I had the chance to dive deeper into the fascinating world of cell fate determination and morphogenesis.
               I was involved in the setting up of several projects and trained to work with multiple cell types and model organisms. During this time,
               I started my journey into programming and image analysis, which are now one of my main passions.
