--- a/index.html
+++ b/index.html
@@ -131,23 +131,7 @@
             deep learning tools for image processing.
             </p>
 
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Current Lab:</strong> <a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">NordenLab</a> </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Playground:</strong> Zebrafish &amp; Human Organoids </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Currently I am:</strong> Lost - Frank Ocean </li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Other Model Organisms:</strong> Mouse, Chick embryo &amp; Embryonic Stem Cells</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Skills:</strong> Mol biology, Microscopy, BioImage Analysis &amp; Scientific Programming </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Future:</strong> maybe you know! </li>
-                </ul>
-              </div>
-            </div>
-            <p>
+
 
             </p>
           </div>
@@ -160,23 +144,23 @@
 <!-- ======= News Section ======= -->
 
     <section id="news" class="news">
-      <div class="section-title">
-      <h2>News</h2>
+      <div class="container">
+          <div class="section-title">
+          <h2>News</h2>
 
-    <div class="table-responsive">
-      <table class="table table-sm table-borderless">
+        <div class="table-responsive">
+          <table class="table table-sm table-borderless">
 
-        <tr>
-          <th scope="row">Jan 20, 2020</th>
-          <td>
-              Website is online (!) and still in the making <img class="emoji" title=":sparkles:" alt=":sparkles:" src="https://github.githubassets.com/images/icons/emoji/unicode/2728.png" height="20" width="20"> <img class="emoji" title=":smile:" alt=":smile:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" height="20" width="20">
-          </td>
-        </tr>
-      </table>
-    </div>
+            <tr>
+              <th scope="row">Jan 20, 2020</th>
+              <td>
+                  Website is online (!) and still in the making <img class="emoji" title=":sparkles:" alt=":sparkles:" src="https://github.githubassets.com/images/icons/emoji/unicode/2728.png" height="20" width="20"> <img class="emoji" title=":smile:" alt=":smile:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" height="20" width="20">
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
   </section><!-- End About Section -->
-
-
 
 
 
@@ -206,9 +190,9 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="icofont-airplane-alt"></i>
-              <span data-toggle="counter-up">4</span>
-              <p><strong>Countries </strong> </p>
-              <p>I have lived in</p>
+              <span data-toggle="counter-up">+4</span>
+              <p><strong>Years</strong> </p>
+              <p>at the lab bench </p>
             </div>
           </div>
 
@@ -281,7 +265,7 @@
             <div class="progress">
               <span class="skill">FISH and immunostainings <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -318,9 +302,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">R <i class="val">40%</i></span>
+              <span class="skill">R <i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -362,23 +346,17 @@
               <h4>Integrative Biology &amp; Biomedicine PhD programme </h4>
               <h5>2019 - present</h5>
               <p><em>Instituto Gulbenkian de Ciencia, Oeiras - Lisbon, PT</em></p>
-              <p>"Investigating the influence of pseudostratification for neuroepithelial development"</p>
-              <p>PhD project under the supervision of Dr. Caren Norden</p>
               <p>Selected through the International Max Planck Research School for Cell, Development and System Biology (call 2019) </p>
             </div>
             <div class="resume-item">
               <h4>MSc in Cellular &amp; Molecular Biotechnology </h4>
               <h5>2016 - 2018</h5>
               <p><em>University of Trento, Trento, IT</em></p>
-              <p>"Establishment of a live imaging strategy to study ERK activity in the exit from naive pluripotency"</p>
-              <p>Master Thesis at the Max Perutz Laboratories, Vienna, Austria, under supervision of Dr. Christa Buecker</p>
             </div>
             <div class="resume-item">
               <h4>BSc in Medical Biotechnology </h4>
               <h5>2013 - 2016</h5>
               <p><em>University of Milan, Milan, IT</em></p>
-              <p> "Characterization of the role of long non-coding RNAs during the differentiation of human CD4 T lymphocytes"</p>
-              <p>BSc Thesis at the INGM, Milan, Italy, under the supervision of Prof. Massimiliano Pagani. </p>
             </div>
           </div>
 
@@ -389,9 +367,8 @@
               <h5>2019 - Present</h5>
               <p><em><a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">Norden Lab</a> - IGC, Oeiras, Portugal</em></p>
               <ul>
-                <li>Focus on advanced 3D image analysis using deep learning tools, such as StarDist, and GPU accelerated computing</li>
-                <li>Strong expertise of the lab in the use of light sheet fluorescence microscopy, which is a powerful technology that enables imaging of large biological systems with minimal photo-damage </li>
-                <li>Possibility to study cell and tissue biology of retinal neuroepithelia both in vivo and in vitro</li>
+                <li>Focus on microscopy and advanced 3D image analysis using deep learning tools, such as StarDist + GPU accelerated computing</li>
+                <li>Model organisms: zebrafish &amp; human retinal organoids </li>
               </ul>
             </div>
             <div class="resume-item">
@@ -400,7 +377,7 @@
               <p><em> <a href="https://ist.ac.at/en/research/kicheva-group/">Kicheva Lab</a> - IST Austria, Klosterneuberg, Austria</em></p>
               <ul>
                 <li>Investigation of BMP and its antagonists in patterning the vertebrate neural tube</li>
-                <li>Trained in working with mice and chick embryos</li>
+                <li>Model organisms: mouse &amp; chick embryos</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -409,8 +386,7 @@
               <p><em> <a href="https://www.maxperutzlabs.ac.at/research/research-groups/buecker">Buecker Lab</a> - Max Perutz Laboratories, Vienna, Austria </em></p>
               <ul>
                 <li>Established live imaging strategies to study the sources of transcriptional heterogeneity in differentiation of mouse Embryonic Stem cells.</li>
-                <li>Developed a basic skill set for image analysis using ImageJ and Cell Profiler, to then code results in Python. </li>
-                <li>Extensively learned to perform tissue culture of ESCs and cloning. </li>
+                <li>Model system: mESCs &amp; HeLa cells </li>
               </ul>
             </div>
             <div class="resume-item">
@@ -418,8 +394,8 @@
               <h5>2013 </h5>
               <p><em> <a href="https://www.ifom.eu/en/cancer-research/research-labs/research-lab-pagani.php">Pagani Lab</a> - INGM, Milano, Italia</em></p>
               <ul>
-                <li>Undergrad rotation as first experience in a laboratory</li>
                 <li>Project focusing on the role of long non-coding RNAs in differentiation of T naive lymphocytes </li>
+                <li>Model system: primary human T lymphocytes </li>
               </ul>
           </div>
         </div>
@@ -537,7 +513,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designeds by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Modified from <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
