new profile image

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/icon.png" rel="icon">
+  <!--link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"-->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -46,10 +46,11 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Lucrezia Ferme</a></h1>
+        <h1 class="text-light"><a href="index.html">Lucrezia C. Ferme</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/Lucrezia_CF" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/lucrezia-ferme-946b17128/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://orcid.org/0000-0003-1853-5591" class="orcid"><i class="fa-brands fa-orcid"></i></a>
         </div>
       </div>
 
